Add user settings
Added user settings:
 - now users can save folders where application will be find Combat Logs.

--- a/src/CombatAnalysis.App/Views/SettingsView.xaml
+++ b/src/CombatAnalysis.App/Views/SettingsView.xaml
@@ -48,10 +48,17 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <StackPanel Grid.Row="0" Grid.Column="0">
-                <TextBlock Text="{loc:Loc Language}" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10"/>
-                <ComboBox Style="{DynamicResource ComboBoxStyle1}" ItemsSource="{Binding Languages}" HorizontalAlignment="Center" VerticalAlignment="Center"
-                          SelectedItem="{Binding SelectedLanguage}"/>
+            <StackPanel Grid.Row="0" Grid.Column="0" Margin="50 0">
+                <TextBlock Text="{loc:Loc Language}" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10"/>
+                <ComboBox Style="{DynamicResource ComboBoxStyle1}" ItemsSource="{Binding Languages}" HorizontalAlignment="Left" VerticalAlignment="Center"
+                          Margin="10 0" SelectedItem="{Binding SelectedLanguage}"/>
+            </StackPanel>
+
+            <StackPanel Grid.Row="1" Grid.Column="0" Margin="50 0">
+                <TextBlock Text="Logs location" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10"/>
+                <TextBlock Text="{Binding LogsLocation}" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10"/>
+                <Button Content="{loc:Loc ChangeLocationPath}" Click="SelectLocation" Width="125" FontSize="16" HorizontalAlignment="Left"
+                    Margin="15 0" Style="{StaticResource showButton}" />
             </StackPanel>
         </Grid>
     </Grid>
